[gd_scene load_steps=3 format=2]

[ext_resource path="res://themes_fonts/space_theme.tres" type="Theme" id=1]
[ext_resource path="res://subscenes/broadcast/full_screen_round/player_box.gd" type="Script" id=2]

[node name="PlayerInfo" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="HeaderFooter" type="VBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 1905.0
margin_bottom = 1065.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Name" type="Label" parent="HeaderFooter"]
margin_right = 1900.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 42 )
size_flags_horizontal = 3
text = "Name"
align = 1
autowrap = true

[node name="Split" type="HBoxContainer" parent="HeaderFooter"]
margin_top = 46.0
margin_right = 1900.0
margin_bottom = 1060.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AvatarContainer" type="TextureRect" parent="HeaderFooter/Split"]
margin_right = 948.0
margin_bottom = 1014.0
rect_min_size = Vector2( 175, 175 )
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="InfoContainer" type="VBoxContainer" parent="HeaderFooter/Split"]
margin_left = 952.0
margin_top = 493.0
margin_right = 1900.0
margin_bottom = 521.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Race" type="Label" parent="HeaderFooter/Split/InfoContainer"]
margin_right = 948.0
margin_bottom = 28.0
size_flags_horizontal = 3
theme_type_variation = "LabelSmall"
text = "Protoss"
